--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -15,14 +15,12 @@
                 </a>
                 <a class="nav-link" href="/admin/user_import_histories.html">
                     <i class="fas fa-boxes"></i><span>&nbsp;CREATE REQUESTS</span></a>
-                    
-
-                    <a class="nav-link" href="/admin/roles/index.html"><i class="fab fa-buromobelexperte" style="margin-right: 0px;"></i><span>&nbsp;</span></a></li>
+                    <a class="nav-link" href="/admin/roles/index.html">
+                    <i class="fab fa-buromobelexperte" style="margin-right: 0px;"></i><span>&nbsp;</span></a></li>
             <li class="nav-item"><a class="nav-link" href="/admin/configs.html"><i class="fas fa-cog"></i><span></span></a></li>
             <li class="nav-item"><a class="nav-link" href="/admin/operation_histories.html"><i class="fas fa-history"></i><span></span></a></li>
             <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-car-alt"></i></a>
             </li>
         </ul>
-        
     </div>
 </nav>
