--- a/app/views/layouts/_navigtation.html.erb
+++ b/app/views/layouts/_navigtation.html.erb
@@ -9,7 +9,7 @@
             <button
                 class="btn btn-outline-secondary btn btn-outline-secondary" type="button" style="/*font-size: 10px;*/border-style: none;">
                 <i class="fas fa-sign-out-alt" style="padding-right: 5px;"></i>
-                <%= link_to("Logout", destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }) %>
+                <%= link_to(t('.log_out'), destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }) %>
             </button>
         </div>
     </nav>
