--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,25 +1,31 @@
 <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 progress-page">
-    <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
+    <div class="container-fluid d-flex flex-column p-0">
+        <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
             <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
             <div class="sidebar-brand-text mx-3"><span>ADMIN</span></div>
         </a>
         <hr class="sidebar-divider my-0">
         <ul class="navbar-nav text-light" id="accordionSidebar">
-            <li class="nav-item"><a class="nav-link" href="/admin/index.html"><i class="fas fa-tachometer-alt"></i><span>NEW ACOUNT USERS</span></a></li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/cases/index.html">
-                    <i class="far fa-list-alt"></i><span>LIST USERS</span>
+                <a class="nav-link" href="/admin/admin_users/new">
+                    <i class="fas fa-tachometer-alt"></i><span>NEW ACCOUNT ADMIN USERS</span>
+                </a>
+            </li>
+
+    
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/admin_users">
+                    <i class="far fa-list-alt"></i><span>LIST ADMIN USERS</span>
                 </a>
                 <a class="nav-link" href="/admin/users/index.html">
                     <i class="fas fa-user"></i><span>LIST REQUESTS</span>
                 </a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link" href="/admin/user_import_histories.html">
-                    <i class="fas fa-boxes"></i><span>&nbsp;CREATE REQUESTS</span></a>
-                    <a class="nav-link" href="/admin/roles/index.html">
-                    <i class="fab fa-buromobelexperte" style="margin-right: 0px;"></i><span>&nbsp;</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="/admin/configs.html"><i class="fas fa-cog"></i><span></span></a></li>
-            <li class="nav-item"><a class="nav-link" href="/admin/operation_histories.html"><i class="fas fa-history"></i><span></span></a></li>
-            <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-car-alt"></i></a>
+                    <i class="fas fa-boxes"></i><span>CREATE REQUESTS</span>
+                </a>
             </li>
         </ul>
     </div>
