--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
       <div class="d-flex flex-column" id="content-wrapper">
         <div id="content">
           <%= render "layouts/navigtation"%>
+          <% flash.each do |key, value| %>
+            <div class="alert alert-<%= key %>">
+              <%= value %>
+            </div>
+          <% end %>
           <%= yield %>
         </div>
       </div>
