--- a/app/views/admin/admin_users/edit.html.erb
+++ b/app/views/admin/admin_users/edit.html.erb
@@ -21,6 +21,14 @@
             <% end %>
             <%= f.password_field :password, class: "form-control", placeholder: "" %>
           </div>
+          <div class="col-md-4 mb-3">
+            <%= f.label :date_of_brith, class: "form-label" do %>
+              <strong>Day Of Brith</strong>
+            <% end %>
+            <div class="date-select-container">
+              <%= f.date_select :date_of_brith, { class: "form-control", placeholder: "", start_year: 1900, end_year: Time.now.year }, { class: "date-select" } %>
+            </div>
+          </div>
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
