--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,29 +2,29 @@
     <div class="container-fluid d-flex flex-column p-0">
         <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
             <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
-            <div class="sidebar-brand-text mx-3"><span>ADMIN</span></div>
+            <div class="sidebar-brand-text mx-3"><span><%= t(".admin")%></span></div>
         </a>
         <hr class="sidebar-divider my-0">
         <ul class="navbar-nav text-light" id="accordionSidebar">
             <li class="nav-item">
                 <a class="nav-link" href="/admin/admin_users/new">
-                    <i class="fas fa-tachometer-alt"></i><span>NEW ACCOUNT ADMIN USERS</span>
+                    <i class="fas fa-tachometer-alt"></i><span><%= t(".new_account_admin_users")%></span>
                 </a>
             </li>
 
-    
+
             <li class="nav-item">
                 <a class="nav-link" href="/admin/admin_users">
-                    <i class="far fa-list-alt"></i><span>LIST ADMIN USERS</span>
+                    <i class="far fa-list-alt"></i><span><%= t(".list_admin_users")%></span>
                 </a>
                 <a class="nav-link" href="/admin/users/index.html">
-                    <i class="fas fa-user"></i><span>LIST REQUESTS</span>
+                    <i class="fas fa-user"></i><span><%= t(".list_requests")%></span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="/admin/user_import_histories.html">
-                    <i class="fas fa-boxes"></i><span>CREATE REQUESTS</span>
+                    <i class="fas fa-boxes"></i><span><%= t(".create_requests")%></span>
                 </a>
             </li>
         </ul>
