--- a/app/views/admin/admin_users/_form.html.erb
+++ b/app/views/admin/admin_users/_form.html.erb
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
   <div class="col-md-4 mb-3">
-    <%= f.label :rname, class: "form-label" do %>
+    <%= f.label :name, class: "form-label" do %>
       <strong><%= t(".name")%></strong>
     <% end %>
     <%= f.text_field :name, class: "form-control", placeholder: "" %>
