--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -57,12 +57,15 @@
               <td><%= user.email %></td>
               <td><%= user.date_of_brith%></td>
               <td><%= user.tel %></td>
-              <td><%= link_to "Edit", edit_admin_user_path(user) %> |
-              <%= link_to "Delete", admin_user_path(user), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+              <td><%= link_to edit_admin_user_path(user) do %><i class="fa-solid fa-pen-to-square" style="color: #24abff;"></i><% end %> |
+              <%= link_to admin_user_path(user), data: { method: :delete, confirm: "Are you sure?" } do %><i class="fa-solid fa-trash-can" style="color: #f34444;"></i><% end %>
             </tr>
             <% end %>
           </tbody>
         </table>
+        <div class="mb-3 text-center">
+          <%= link_to "Create", new_admin_user_path, class: "btn btn-primary btn-sm text-center", style: "text-align: center;margin-top: 20px;" %>
+        </div>
       </div>
 
       <div class="row">
@@ -70,25 +73,7 @@
         </div>
         <div class="col-md-6">
           <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
-            <ul class="pagination">
-              <li class="page-item <%= @users.current_page == 1 ? 'disabled' : '' %>">
-                <a class="page-link" aria-label="Previous" href="?page=<%= @users.current_page - 1 %>">
-                  <span aria-hidden="true">«</span>
-                </a>
-              </li>
-              <% (1..@users.total_pages).each do |page| %>
-                <% if page == @users.current_page %>
-                  <li class="page-item active"><span class="page-link"><%= page %></span></li>
-                <% else %>
-                  <li class="page-item"><a class="page-link" href="?page=<%= page %>"><%= page %></a></li>
-                <% end %>
-              <% end %>
-              <li class="page-item <%= @users.current_page == @users.total_pages ? 'disabled' : '' %>">
-                <a class="page-link" aria-label="Next" href="?page=<%= @users.current_page + 1 %>">
-                  <span aria-hidden="true">»</span>
-                </a>
-              </li>
-            </ul>
+            <%= will_paginate @clients, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
           </nav>
         </div>
       </div>
